--- a/zeus.html
+++ b/zeus.html
@@ -4,64 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="zeus.style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Zeus Airlines</title>
 </head>
-<body>
-    <pageHead>
+<body class="dark:bg-slate-800 text-white">
+    <pageHead class="z-index-10 relative font-bold bg-gradient-to-r from-[#299300a0] via-[#009274a0] to-[#0088bda0] block p-2">
         <div2>
             <span>Zeus Airlines</span>
         </div2>
-        <div>
-            <span><a href="#About us">About us</a></span>
-            <span><a href="#Flights">Flights</a></span>
+        <div class="float-right">
+            <span class="p-1"><a class="[color:inherit]" href="#About us">About us</a></span>
+            <span class="p-1"><a class="[color:inherit]" href="#Flights">Flights</a></span>
+            <span class="p-1"><a class="[color:inherit]" href="#Contact us">Contact us</a></span>
         </div>
     </pageHead>
-    <div id="poster">
-        <span class="material-symbols-outlined grad">airlines</span>
-        <h1>Zeus</h1>
+    <div class="w-full text-center">
+        <span class="material-symbols-outlined grad text-[16rem] [-webkit-text-fill-color:transparent]">airlines</span>
+        <h1 class=" block text-5xl mt-[-3rem] no-underline">Zeus</h1>
     </div>
-    <spacer></spacer>
-    <div id="aboutUs">
-        <h1>About us</h1>
-        <p>Zeus is startup company that wants to revolutionize flying. Our mission is to build jets flying Mach 3.5 and above <em>and</em> keep prices affordable for everyone.</p>
-        <span class="material-symbols-outlined grad">airplane_ticket savings</span>
+    <spacer class="h-[2px] bg-gradient-to-r from-[#d81c8f] via-[#ffbd00] to-[#00a7ff] block mt-8"></spacer>
+    <div class="m-4 w-[inherit] text-center">
+        <h1 class="block text-center mb-4 no-underline" id="About us">About us</h1>
+        <p>Our mission is to revolutionize flying as you know it. We are create planes with top speeds of Mach 3.5 and above, as well as trying to keep prices affordable for everyone.</p>
+        <span class="material-symbols-outlined grad text-[6rem] [-webkit-text-fill-color:transparent]">airplane_ticket savings</span>
     </div>
-    <spacer></spacer>
-    <div id="flights">
-        <h1>Flights</h1>
-        <div>
-            <row>
-                <slot1>FRA</slot1>
-                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
-                <slot3>MJT</slot3>
+    <spacer class="h-[2px] bg-gradient-to-r from-[#d81c8f] via-[#ffbd00] to-[#00a7ff] block mt-8 mb-8"></spacer>
+    <div class="grid grid-cols-1 gap-6 md:text-2xl">
+        <h1 class="block text-center no-underline" id="Flights">Flights</h1>
+        <div class="grid grid-cols-[1fr] gap-y-12 md:w-1/2 md:translate-x-1/2">
+            <row class="grid [grid-template-rows:1fr] grid-cols-[1fr_2fr_1fr] font-bold text-center gap-6 items-center">
+                <slot1 class="border-r-2 border-slate-400">FRA</slot1>
+                <slot2 class="grid grid-cols-5 items-center">12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3 class="border-l-2 border-r-slate-400">MJT</slot3>
             </row>
-            <sp></sp>
-            <row>
-                <slot1>FRA</slot1>
-                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
-                <slot3>MJT</slot3>
+            <row class="grid [grid-template-rows:1fr] grid-cols-[1fr_2fr_1fr] font-bold text-center gap-6 items-center">
+                <slot1 class="border-r-2 border-slate-400">FRA</slot1>
+                <slot2 class="grid grid-cols-5 items-center">12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3 class="border-l-2 border-r-slate-400">MJT</slot3>
             </row>
-            <sp></sp>
-            <row>
-                <slot1>FRA</slot1>
-                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
-                <slot3>MJT</slot3>
+            <row class="grid [grid-template-rows:1fr] grid-cols-[1fr_2fr_1fr] font-bold text-center gap-6 items-center">
+                <slot1 class="border-r-2 border-slate-400">FRA</slot1>
+                <slot2 class="grid grid-cols-5 items-center">12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3 class="border-l-2 border-r-slate-400">MJT</slot3>
             </row>
-            <sp></sp>
-            <row>
-                <slot1>FRA</slot1>
-                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
-                <slot3>MJT</slot3>
+            <row class="grid [grid-template-rows:1fr] grid-cols-[1fr_2fr_1fr] font-bold text-center gap-6 items-center">
+                <slot1 class="border-r-2 border-slate-400">FRA</slot1>
+                <slot2 class="grid grid-cols-5 items-center">12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3 class="border-l-2 border-r-slate-400">MJT</slot3>
             </row>
-            <sp></sp>
-            <row>
-                <slot1>FRA</slot1>
-                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
-                <slot3>MJT</slot3>
+            <row class="grid [grid-template-rows:1fr] grid-cols-[1fr_2fr_1fr] font-bold text-center gap-6 items-center">
+                <slot1 class="border-r-2 border-slate-400">FRA</slot1>
+                <slot2 class="grid grid-cols-5 items-center">12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3 class="border-l-2 border-r-slate-400">MJT</slot3>
             </row>
         </div>
     </div>
-    <heart>Handcrafted with ❤️ in Germany</heart>
+    <spacer class="h-[2px] bg-gradient-to-r from-[#d81c8f] via-[#ffbd00] to-[#00a7ff] block mt-8 mb-8"></spacer>
+    <h1 class="block text-center no-underline mb-8" id="Contact us">Contact us</h1>
+    <div class="flex w-[inherit] justify-center">
+        <div class="grid grid-cols-2 md:grid-cols-4 text-center items-center w-80 md:w-1/2 gap-y-4">
+            <e class="material-symbols-outlined grad [-webkit-text-fill-color:transparent]">phone</e>
+            <span>+49 000 000000000</span>
+            <e class="material-symbols-outlined grad [-webkit-text-fill-color:transparent]">mail</e>
+            <a href="mailto:zeus@xefili.dev">zeus@xefili.dev</a>
+        </div>
+    </div>    
+    <heart class="block text-center mt-12">Handcrafted with ❤️ in Germany</heart>
 </body>
 </html>
