--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
             <a href="blog.html">
                 <blog id="blog">Blog<span class="material-symbols-outlined">chat</span></Blog>
             </a>
-            <a href="https://docs.bucketlounge.tk">
+            <a href="https://xefili.dev/docs">
                 <docs id="docs">Documentation<span class="material-symbols-outlined">description</span></Docs>
             </a>
             <a href="tools.html">
