--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="blog.html">
                 <blog class="flex items-center font-black md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
             </a>
-            <a href="https://docs.bucketlounge.tk">
+            <a href="https://xefili.dev/docs">
                 <docs class="flex items-center font-black md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
             </a>
             <a href="tools.html">
