--- a/tools.html
+++ b/tools.html
@@ -28,7 +28,7 @@
             <a href="blog.html">
                 <blog id="blog">Blog <span class="material-symbols-outlined">chat</span></Blog>
             </a>
-            <a href="https://docs.bucketlounge.tk">
+            <a href="https://xefili.dev/docs">
                 <docs id="docs">Documentation <span class="material-symbols-outlined">description</span></Docs>
             </a>
             <a href="tools.html">
@@ -43,28 +43,28 @@
                 <left id="prev-btn" class="material-symbols-outlined">arrow_back</left>
                     <div id="item-list" class="item-list">
                         <div id="item" class="item">
-                            <img src="assets/vscode.svg"/>
+                            <img alt="" src="assets/vscode.svg"/>
                             <textbox>
                                 <h1>Visual Studio Code</h1>
                                 <text>The main tool I personally use to develop this page.</text>
                             </textbox>
                         </div>
                         <div id="item" class="item">
-                            <img src="assets/Cloudflare-logo-transparent-v-rgb_thumbnail.webp"/>
+                            <img alt="" src="assets/Cloudflare-logo-transparent-v-rgb_thumbnail.webp"/>
                             <textbox>
                                 <h1>Cloudflare</h1>
                                 <text>Cloudflare Pages, DNS and Zero Trust are key elements of this webpage and it's services. Cloudflare Pages is used to host all the different pages. The api runs locally at home through a Cloudflare Tunnel and is managed remotely. Learn more about this on the <a href="https://xefili.dev/blog.html">Blog</a></text>
                             </textbox>
                         </div>
                         <div id="item" class="item">
-                            <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"/>
+                            <img alt="" src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"/>
                             <textbox>
                                 <h1>Github</h1>
                                 <text>Github is used as a way to host the webpage's files in a way for everyone to see.</text>
                             </textbox>
                         </div>
                         <div id="item" class="item">
-                            <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"/>
+                            <img alt="" src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"/>
                             <textbox>
                                 <h1>json-webserver</h1>
                                 <text>The tool behind the api. Learn more <a href="https://github.com/typicode/json-server">here</a></text>
