Add margin to space out elements

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         </leftDivision>
         <navBar class="flex float-right h-12 items-center justify-evenly">
             <a href="index.html">
-                <home class="flex items-center font-black md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
+                <home class="flex items-center font-black mr-8 md:before:content-['Home⠀']"><span class="material-symbols-outlined">home</span></home>
             </a>
             <a href="blog.html">
-                <blog class="flex items-center font-black md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
+                <blog class="flex items-center font-black mr-8 md:before:content-['Blog⠀']"><span class="material-symbols-outlined">chat</span></Blog>
             </a>
             <a href="https://xefili.dev/docs">
-                <docs class="flex items-center font-black md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
+                <docs class="flex items-center font-black mr-8 md:before:content-['Documentation⠀']"><span class="material-symbols-outlined">description</span></Docs>
             </a>
             <a href="tools.html">
-                <tools class="flex items-center font-black md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
+                <tools class="flex items-center font-black mr-8 md:before:content-['Tools⠀']"><span class="material-symbols-outlined">construction</span></search>
             </a>
         </navBar>
     </pageHead>
