--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/style.css"/>
     <link rel="stylesheet" href="styles/build.css"/>
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
-    <title>Home - Bucket Lounge</title>
+    <title>Home - Xefili.dev</title>
 </head>
 <body class="dark:bg-[#2c2c2c]">
     <pageHead class="fixed block h-12 w-full bg-[#30aec4a9] dark:bg-gradient-to-r from-blue-600 to-violet-600 backdrop-blur-lg z-20">
@@ -76,10 +76,20 @@
             </textDivision>
             <button class="button" type="submit" onclick="window.location.href='/tools.html'" id="divisionButton">To Tool Collection</button>
         </gridDivision>
+
+        <cSpacer class="h-12"></cSpacer>
+        
+        <div class="text-center">
+            <h2 class="md:mb-8">Want to host your page here?</h2>
+            <p>Contact me on Dicord @ uphillbucket687</p>
+        </div>
+
+        <cSpacer class="h-12"></cSpacer>
+        <heart class="block text-center mt-12">Handcrafted with ❤️ in Germany</heart>
     </pageContent>
 </body>
 <script>
-    const handleZoom = () => {
+const handleZoom = () => {
   document.body.style.zoom = `${Math.round(100 / window.devicePixelRatio)}%`
 }
 </script>
