--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <link id="swap" rel="stylesheet" href="styles/style.css"/>
     <link id="swap" rel="stylesheet" href="styles/build.css">
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
-    <title>Home - Bucket Lounge</title>
+    <title>Blog - Xefili.dev</title>
 </head>
 <body class="dark:bg-[#2c2c2c]">
     <pageHead class="fixed block h-12 w-full bg-[#30aec4a9] dark:bg-gradient-to-r from-blue-600 to-violet-600 backdrop-blur-lg z-20">
