--- a/zeus/index.html
+++ b/zeus/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/build.css">
-    <title>Zeus Airlines</title>
+    <title>Home - Zeus Airlines</title>
 </head>
 <body class="dark:bg-slate-800 text-white">
     <pageHead class="z-index-10 relative font-bold bg-gradient-to-r from-[#299300a0] via-[#009274a0] to-[#0088bda0] block p-2">
