Add gradient and max height

--- a/blog.html
+++ b/blog.html
@@ -40,25 +40,33 @@
         <h1 class="w-full text-center block">Welcome to the blog!</h1>
         <p class="w-full text-center block md:text-2xl">read up on the latest developments of this page.</p>
         <articles class="grid md:grid-cols-3 gap-4">
-            <art class="article-sec" id="art1" onclick="enlarge('art1')">
-                <h3>Lorem ipsum</h3>
-                <text>Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
-                <blrr></blrr>
+            <art id="art1" class="border-slate-500 border-2 m-2 rounded-3xl">
+                <div class="inline-block relative m-2 max-h-96">
+                    <h3>Lorem ipsum</h3>
+                    <text>Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
+                    <blrr class="bg-gradient-to-b from-[#ffffff00] dark:from-[#2c2c2c00] to-[#ffffffff] dark:to-[#2c2c2cff] absolute h-12 w-full left-0 bottom-0"></blrr>
+                </div>
             </art>
-            <art class="article-sec" id="art2" onclick="enlarge('art2')">
-                <h3>Lorem Ipsum</h3>
-                <text>Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
-                <blrr></blrr>
+            <art id="art2" class="border-slate-500 border-2 m-2 rounded-3xl">
+                <div class="inline-block relative m-2 max-h-96">
+                    <h3>Lorem ipsum</h3>
+                    <text>Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
+                    <blrr class="bg-gradient-to-b from-[#ffffff00] dark:from-[#2c2c2c00] to-[#ffffffff] dark:to-[#2c2c2cff] absolute h-12 w-full left-0 bottom-0"></blrr>
+                </div>
             </art>
-            <art class="article-sec" id="art3" onclick="enlarge('art3')">
-                <h3>Lorem Ipsum</h3>
-                <text>Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
-                <blrr></blrr>
+            <art id="art3" class="border-slate-500 border-2 m-2 rounded-3xl">
+                <div class="inline-block relative m-2 max-h-96">
+                    <h3>Lorem ipsum</h3>
+                    <text>Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
+                    <blrr class="bg-gradient-to-b from-[#ffffff00] dark:from-[#2c2c2c00] to-[#ffffffff] dark:to-[#2c2c2cff] absolute h-12 w-full left-0 bottom-0"></blrr>
+                </div>
             </art>
-            <art class="article-sec" id="art4" onclick="enlarge('art4')">
-                <h3>Lorem Ipsum</h3>
-                <text>Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
-                <blrr></blrr>
+            <art id="art4" class="border-slate-500 border-2 m-2 rounded-3xl">
+                <div class="inline-block relative m-2 max-h-96">
+                    <h3>Lorem ipsum</h3>
+                    <text>Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.Lorem ipsum dies arae dis owesum.</text>
+                    <blrr class="bg-gradient-to-b from-[#ffffff00] dark:from-[#2c2c2c00] to-[#ffffffff] dark:to-[#2c2c2cff] absolute h-12 w-full left-0 bottom-0"></blrr>
+                </div>
             </art>
         </articles>
         <p>Looking for a different article? Visit the archive <a id="a" href="/blog/displayArticle.html">here</a></p> <!-- this id is stupid but works :) -->
@@ -72,18 +80,9 @@
             </content>
         </action>
     </pageContent>
-    <script src="script.js" type="module">
-    </script>
+    <script src="script.js" type="module"></script>
     <script>
-        function enlarge(id) {
-            document.getElementById(id).classList.toggle("hidden")
-        }
-        function ret() {
-            var arts = document.getElementsByClassName("article-sec")
-            for(var i = 0; i < 4; i++) {
-                arts[i].classList.toggle("hidden")
-            }
-        }
+        console.info("Like snooping around here? Check out the source code @ https://github.com/xefili/xefili.dev ;)");
     </script>
 </body>
 </html>
