--- a/zeus/index.html
+++ b/zeus/index.html
@@ -26,7 +26,7 @@
     <spacer class="h-[2px] bg-gradient-to-r from-[#d81c8f] via-[#ffbd00] to-[#00a7ff] block mt-8"></spacer>
     <div class="m-4 w-[inherit] text-center">
         <h1 class="block text-center mb-4 no-underline" id="About us">About us</h1>
-        <p>Our mission is to revolutionize flying as you know it. We are create planes with top speeds of Mach 3.5 and above, as well as trying to keep prices affordable for everyone.</p>
+        <p>Our mission here at Zeus GmbH & co. KG is to revolutionize flying as you know it. We are create planes with top speeds of Mach 3.5 and above, as well as trying to keep prices affordable for everyone.</p>
         <span class="material-symbols-outlined grad text-[6rem] [-webkit-text-fill-color:transparent]">airplane_ticket savings</span>
     </div>
     <spacer class="h-[2px] bg-gradient-to-r from-[#d81c8f] via-[#ffbd00] to-[#00a7ff] block mt-8 mb-8"></spacer>
